[GTK][WPE] Incorrect tile coverage when resizing a layer out of the visible area https://bugs.webkit.org/show_bug.cgi?id=191545

Reviewed by Žan Doberšek.

Keep track of layer size changes even if they happen when the layer is not in the visible
area, so we can update edge tiles when the layer gets visible.

* platform/graphics/texmap/coordinated/TiledBackingStore.cpp:
(WebCore::TiledBackingStore::createTiles):
* platform/graphics/texmap/coordinated/TiledBackingStore.h:


Canonical link: https://commits.webkit.org/206335@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@238126 268f45cc-cd09-0410-ab3c-d52691b4dbfc